--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
   },
   "homepage": "https://github.com/NextThought/nti.web.payments#readme",
   "dependencies": {
+    "@nti/lib-locale": "^1.6.0",
     "@nti/util-logger": "^1.6.0",
     "@nti/web-client": "^1.8.0",
+    "@nti/web-commons": "^0.47.0",
     "prop-types": "^15.6.2",
     "react-stripe-elements": "^2.0.1"
   },
