--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nti/web-payments",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha",
   "description": "NextThought components for payments",
   "main": "lib/index.js",
   "module": "src/index.js",
