--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@nti/style-common": "^1.7.0",
     "@nti/util-logger": "^1.6.0",
     "@nti/web-client": "^1.8.0",
-    "@nti/web-commons": "^0.47.0",
+    "@nti/web-commons": "0.x.x",
     "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
     "react-stripe-elements": "^2.0.1"
