--- a/package.json
+++ b/package.json
@@ -38,14 +38,16 @@
     "@nti/util-logger": "NextThought/nti.util.logger",
     "@nti/web-client": "NextThought/nti.web.client",
     "@nti/web-commons": "NextThought/nti.web.commons",
-    "classnames": "^2.2.6",
-    "prop-types": "^15.6.2",
     "react-stripe-elements": "^2.0.1"
   },
   "devDependencies": {
     "@nti/cmp-scripts": "^2.1.3",
-    "@nti/style-common": "NextThought/nti.style.common",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "@nti/style-common": "NextThought/nti.style.common"
+  },
+  "peerDependencies": {
+    "classnames": "*",
+    "react": "*",
+    "react-dom": "*",
+    "prop-types": "*"
   }
 }
