--- a/package.json
+++ b/package.json
@@ -41,13 +41,6 @@
     "react-stripe-elements": "^2.0.1"
   },
   "devDependencies": {
-    "@nti/cmp-scripts": "^2.1.3",
-    "@nti/style-common": "NextThought/nti.style.common"
-  },
-  "peerDependencies": {
-    "classnames": "*",
-    "react": "*",
-    "react-dom": "*",
-    "prop-types": "*"
+    "@nti/cmp-scripts": "^2.31.8"
   }
 }
