--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@nti/util-logger": "NextThought/nti.util.logger",
     "@nti/web-client": "NextThought/nti.web.client",
     "@nti/web-commons": "NextThought/nti.web.commons",
-    "react-stripe-elements": "^6.1.2"
+    "@stripe/react-stripe-js": "^1.2.2",
+    "@stripe/stripe-js": "^1.12.1"
   },
   "devDependencies": {
     "@nti/cmp-scripts": "^2.31.8"
