Cleanup, use storybook

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "src"
   ],
   "scripts": {
-    "test": "cmp-scripts test",
-    "start": "cmp-scripts start",
     "clean": "cmp-scripts clean",
     "check": "cmp-scripts check",
+    "fix": "cmp-scripts fix",
     "release": "cmp-scripts release",
-    "fix": "cmp-scripts fix"
+    "start": "start-storybook -p 6006",
+    "test": "cmp-scripts test"
   },
   "repository": {
     "type": "git",
